Time: 16 ms (76.31%) | Memory: 45.6 MB (45.60%) - LeetSync